- 멀티스레딩, 읽기,쓰기 작업이 섞인 환경에서 synchronizedList가 더 좋은 퍼포먼스를 보여주었다. - synchronizedList에서 동시성 문제 해결을 위해 for문 순회 조회 시 동기화 과정 추가
TODO
- 참여자 목록 String에서 List로 변환